# ifc

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  LICENSE  NOTICE.txt  README.md  SUPPORT.md  TODO.md  ifc-driver.md  vcpkg.json
.github/workflows/: cmake.yml  codeql.yml
build-test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Microsoft.IFCConfigVersion.cmake  cmake_install.cmake  ifc
cmake/: install-config.cmake  install-rules.cmake
cmake/find/: FindMicrosoft.GSL.cmake  Finddoctest.cmake
codeql/: build.bat  build.sh
include/: basic-types.hxx  enum-utils.hxx  fs-api.hxx  runtime-assertions.hxx
include/ifc/: abstract-sgraph.hxx  assertions.hxx  basic-types.hxx  file.hxx  index-utils.hxx  io.hxx  latest-edg-drop.hxx  operators.hxx  pathname.hxx  pp-forms.hxx  reader.hxx  source-word.hxx  tooling.hxx  underlying.hxx  util.hxx  version.hxx
include/ifc/dom/: node.hxx
include/ipr/util/: exceptions.hxx
samples/sgraph-js/: globals.js  index.html  loader.js
samples/sgraph-js/sgraph/: charts.js  decls.js  dirs.js  exprs.js  io.js  literals.js  operators.js  resolve.js  sgraph.js  types.js  util.js  vendor.js
samples/sgraph-js/ui/: filter.js  graph.js  ifc-explorer.js  options.js  sidebar.js
src/: CMakeLists.txt  assert.cxx  file.cxx  hash_win.cxx  input-file.cxx  sgraph.cxx  sha256.cxx
src/ifc-dom/: CMakeLists.txt  charts.cxx  common.hxx  decls.cxx  exprs.cxx  literals.cxx  names.cxx  sentences.cxx  stmts.cxx  syntax.cxx  types.cxx
src/ifc-printer/: CMakeLists.txt  main.cxx  printer.cxx  printer.hxx
src/ifc-reader/: CMakeLists.txt  assert.cxx  file.cxx  filesystem.cxx  hash_win.cxx  io.cxx  operators.cxx  reader.cxx  sgraph.cxx  sha256.cxx  util.cxx
src/ifcdasm/: CMakeLists.txt  main.cxx  printer.cxx  printer.hxx
src/tools/: ifc-archive.cxx  ifc-archive.hxx  ifc.cxx  tool-support.cxx  tool-support.hxx
test/: CMakeLists.txt  archive-fixture.ps1  archive-roundtrip.cmake  basic.cxx  m.ixx  main.cxx  n.ixx  reader_bounds_test.cxx
